--- a/lokswar/home/templates/detail.html
+++ b/lokswar/home/templates/detail.html
@@ -11,26 +11,9 @@
                     <div class="blog-posts-area">
 
                         <!-- Single Featured Post -->
-                        <div class="single-blog-post featured-post single-post">
-                            <div class="post-thumb">
-                                <img src="{{ detail.image.url }}" alt="">
-                            </div>
-                            <div class="post-data">
-                                <a href="#" class="post-catagory">Finance</a>
-                                <a href="#" class="post-title">
-                                    <h6>{{ detail.title }}</h6>
-                                </a>
-                                
-                                <div class="post-meta">
-                                    <p class="post-author">By <a href="#">{{ detail.author }}</a></p>
-                                    <p>{{ detail.description }}</p>
-                                    <p>{{ detail.date }}</p>
+                     {% block detail %}
 
-                                    
-                                </div>
-                            </div>
-                        </div>
-
+                     {% endblock %}
                         <!-- About Author -->
                       
 
